* Block attempts to free workspace memory that shouldn't be randomly freed.
* Teletext: Don't mimic SAA5050 "hold bug" if Alpha and Graphics Black
  enabled (VDU23,18,3,1|)
* Teletext: Hold characer wasn't being cleared when switching between
  double height and normal size.
* Teletext: Fixed a bug where flash wasn't flashing while INKEY(delay).

* V1.22.5 - 08 May 2020
* Fixed a bug in CLS where it missed the bottom of the screen if the
  vertical resolution wasn't a multiple of the text height.
* Fixed various bug in 64-bit variable handling.
* Fixed an omission - indirection offsets on 64-bit variables are now
  supported.
* Changed the appearance of the * character in MODE 7, as I never really
  liked the RISC OS 5 shape, it's now much closer to the SAA5050 shape
  while retaining the RISC OS 5 dimensions.
* Implemented an equivalent to OSWORD 10 for the Teletext font. Using
  OSWORD &8B as it appears to be undefined. Requires a 44 byte block.
* Implemented OSWORD &8C to change a Teletext character definition.
  These two are specific to Matrix Brandy and Richard Russell's BBCSDL
  (and were developed in parallel).
  Details on these calls are in docs/Mode7.txt
* Removed Teletext 12x20 and 14x20 displays, thus VDU23,18,255,x is no more.
* Added example library SAA505Xlib, which uses the new OSWORD calls to
  allow language changes as per the SAA505x family (0-7 supported).
* Telstar client updated so control code inserter page on F2 shows US-ASCII
  characters to match keytops!

* V1.22.4 - 10 March 2020
- Enable building on Cygwin 64-bit
- Some more 64-bit fixes
- Initial steps to allow SYS to call host library functions. Enabled for
  Linux and Windows (thank you Richard Russell for the code snippet!)
- SDL surface handle now available from Brandy_GetVideoDriver in R5.
- Raise function now handles invalid values gracefully. Range is slightly
  more permissive than BASIC I-V, but closely matches BASIC VI.